Library/AXL(Library)/Visual Basic/AXA.bas


'Inspect if the data is more than the upper limit specified in memory buffer of specified input channel
'=================================================================================================='
' *upUpper     : FALSE(0)
'              : TRUE(1)
'=================================================================================================='
Public Declare Function AxaiHwIsBufferUpper Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef upUpper As Long) As Long


'Inspect if the data is less than the upper limit specified in memory buffer of specified input channel
'=================================================================================================='
' *upLower     : FALSE(0)
'              : TRUE(1)
'=================================================================================================='
Public Declare Function AxaiHwIsBufferLower Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef upLower As Long) As Long


'==External Trigger Mode Function
'Start external trigger mode of the selected channels of specified input module.
'==================================================================================================//
' lSize           : Number of channels to use external trigger on specified input module
' *lpChannelPos   : Index of channels to use external trigger on specified input module
Public Declare Function AxaiExternalStartADC Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lSize As Long, ByRef lpChannelPos As Long) As Long
'Stop external trigger mode of specified input module.
Public Declare Function AxaiExternalStopADC Lib "AXL.dll" (ByVal lModuleNo As Long) As Long
'Return FIFO status of specified input module
'=================================================================================================='
' upStatus         : FIFO_DATA_EXIST(0)
'                  : FIFO_DATA_EMPTY(1)
'                  : FIFO_DATA_HALF(2)
'                  : FIFO_DATA_FULL(6)
'=================================================================================================='
Public Declare Function AxaiExternalReadFifoStatus Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef upStatus As Long) As Long
'Read converted A/D value from external signal of specified input module.
' lSize           : Number of channels to read converted A/D value in specified input module
' *lpChannelPos   : Index of channels to read converted A/D value in specified input module
' lDataSize       : Number of maximum data to read converted A/D value by external trigger
' lBuffSize       : Size of externally allocated data buffer
' lStartDataPos   : Starting location of data buffer saving
' *dpVolt         : Two-demensional array pointer(for receiving value of converted to A/D)
' *lpRetDataSize  : Actually assigned number to data buffer(converted A/D value)
' *dwpStatus      : Return FIFO status when read converted A/D value from Fifo(H/W Buffer)
Public Declare Function AxaiExternalReadVoltage Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal lSize As Long, ByRef lpChannelPos As Long, ByVal lDataSize As Long, ByVal lBuffSize As Long, ByVal lStartDataPos As Long, ByRef dpVolt As Double, ByRef lpRetDataSize As Long, ByRef upStatus As Long) As Long


'========== API group of output module information search ========================================================================================
'Verify module number with specified output channel number
Public Declare Function AxaoInfoGetModuleNoOfChannelNo Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef lpModuleNo As Long) As Long


'Verify entire number of channel of analog output module
Public Declare Function AxaoInfoGetChannelCount Lib "AXL.dll" (ByRef lpChannelCount As Long) As Long


'========== API group for output module setting and verification ========================================================================================
'Set output voltage range in specified output channel
'=================================================================================================='
' AO4R
' dMinVolt    : -10V/-5V/0V
' dMaxVolt    : 10V/5V/
'
' AO2Hx
' dMinVolt    : -10V Fix
' dMaxVolt    : 10V Fix
'=================================================================================================='
Public Declare Function AxaoSetRange Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dMinVolt As Double, ByVal dMaxVolt As Double) As Long


'Verify output voltage range in specified output channel
'=================================================================================================='
' AO4R
' dMinVolt    : -10V/-5V/0V
' dMaxVolt    : 10V/5V/
'
' AO2Hx
' dMinVolt    : -10V Fix
' dMaxVolt    : 10V Fix
'=================================================================================================='
Public Declare Function AxaoGetRange Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dpMinVolt As Double, ByRef dpMaxVolt As Double) As Long


'Set output voltage range in specified multiple output channels
'=================================================================================================='
' AO4R
' dMinVolt    : -10V/-5V/0V
' dMaxVolt    : 10V/5V/
'
' AO2Hx
' dMinVolt    : -10V Fix
' dMaxVolt    : 10V Fix
'=================================================================================================='
Public Declare Function AxaoSetMultiRange Lib "AXL.dll" (ByVal lSize As Long, ByRef lpChannelNo As Long, ByVal dMinVolt As Double, ByVal dMaxVolt As Double) As Long


'The Input voltage is output in specified output channel
Public Declare Function AxaoWriteVoltage Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dVolt As Double) As Long


'The Input voltage is output in specified multiple output channel
Public Declare Function AxaoWriteMultiVoltage Lib "AXL.dll" (ByVal lSize As Long, ByRef lpChannelNo As Long, ByRef dpVolt As Double) As Long


'Verify voltage which is output in specified output channel
Public Declare Function AxaoReadVoltage Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dpVolt As Double) As Long


'Verify voltage which is output in specified multiple output channels
Public Declare Function AxaoReadMultiVoltage Lib "AXL.dll" (ByVal lSize As Long, ByRef lpChannelNo As Long, ByRef dpVolt As Double) As Long


'============================ AXA User Define Pattern Generator ============================
' API function for setting 'Channel User Define Pattern Generator'
' Outputting pattern every time depending on AxaoPgSetUserInterval setting
' lLoopCnt       : '0'(Repeat input pattern infinitely), 'value' : Keep last pattern, After outputting input pattern for specified number of times
'                : (MAX : 60000)
' lPatternSize   : Number of input pattern(MAX : 8192)
Public Declare Function AxaoPgSetUserPatternGenerator Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal lLoopCnt As Long, ByVal lPatternSize As Long, ByRef dpPattern As Double) As Long

' API function for getting 'user define pattern generator'
Public Declare Function AxaoPgGetUserPatternGenerator Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef lpLoopCnt As Long, ByRef lpPatternSize As Long, ByRef dpPattern As Double) As Long

' API function for setting 'pattern generator interval' of corresponding channel
' Unit : us(Default resolution : 500uSec)
Public Declare Function AxaoPgSetUserInterval Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dInterval As Double) As Long

' API function for getting 'pattern generator interval' of corresponding channel
Public Declare Function AxaoPgGetUserInterval Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dpInterval As Double) As Long

' API function for getting 'Pattern Index / Loop Cnt' of corresponding channel
' In the case of status, following status can be included.
' lpIndexNum : The index of current user pattern
' lpLoopCnt : Number of currently running loop
' dwpInBusy : Driving status of Pattern Generator
Public Declare Function AxaoPgGetStatus Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef lpIndexNum As Long, ByRef lpLoopCnt As Long, ByRef dwpInBusy As Long) As Long


' API function for start 'User Define Pattern Generator' of corresponding channel ('AO' output start)
' Inputting start channel number as an array
' Start pattern generator function simultaneously for input channel.
Public Declare Function AxaoPgSetUserStart Lib "AXL.dll" (ByVal lpChannelNo As Long, ByVal lSize As Long) As Long


' API function for stopping 'User Define Pattern Generator' of corresponding channel ('AO' output stop)
' Output value is switched to 0 volt when output is stopped
Public Declare Function AxaoPgSetUserStop Lib "AXL.dll" (ByRef lpChannelNo As Long, ByVal lSize As Long) As Long


' API function for clearing Pattern Data(Reset all areas to 0x00)
Public Declare Function AxaPgSetUserDataReset Lib "AXL.dll" (ByVal lChannelNo As Long) As Long


' API function for setting output status by each channel when specified output module network is broken
'===============================================================================================//
' lChannelNo  : Channel number(Distributed slave products only)
' dwSetValue  : Setting value
'             : 1 --> Analog Max
'             : 2 --> Analog MIN
'             : 3 --> User Vaule(Default user value : 0V, You can change this value by 'AxaoSetNetworkErrorUserValue()')
'             : 4 --> Analog 0 V
'==============================================================================================='
Public Declare Function AxaoSetNetworkErrorAct Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwSetValue As Long) As Long

' API function for setting output status in bytes when specified output module network is broken
'==============================================================================================='
' lChannelNo  : Channel number(Distributed slave products only)
' dVolt       : Analog output voltage(User defined value)
'==============================================================================================='
Public Declare Function AxaoSetNetworkErrorUserValue Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dVolt As Double) As Long


